# python-to-mermaid

./: .gitignore  LICENSE  README.md  publish.sh  pyproject.toml
examples/: __main__.py  node_shapes.md  node_shapes.py  node_with_text.md  node_with_text.py
src/python_to_mermaid/: __init__.py
tests/: test_mermaid.py  test_shapes.py
