[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "python-to-mermaid"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pytest>=7.4.4",
]
description = "Generate Mermaid diagrams using Python code"
name = "python-to-mermaid"
readme = "README.md"
requires-python = ">=3.7"
version = "0.1.1"

[project.urls]
"Bug Tracker" = "https://github.com/python-to-mermaid/python-to-mermaid/issues"
"Homepage" = "https://github.com/python-to-mermaid/python-to-mermaid"

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
